<resources>
    <string name="app_name" translatable="false">PetalVault</string>
    <string name="import_vault">Import</string>
    <string name="new_vault">New</string>
    <string name="select_vault_or_create_import_a_new_one">Select vault or create / import a new one</string>
    <string name="petalvault_logo">PetalVault logo</string>
    <string name="add_entry">Add Entry</string>
    <string name="sync_from">Sync from</string>
    <string name="sync_to">Sync to</string>
    <string name="notes">Notes</string>
    <string name="password">Password</string>
    <string name="user_name">User Name</string>
    <string name="site">Site</string>
    <string name="scan_this_qr_code_to_sync">Scan this QR code to sync</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="qr_index">%1$d / %2$d</string>
    <string name="show_mnemonic">Show mnemonic</string>
    <string name="canceled">Canceled</string>
    <string name="vault_name_hint">My Vault 1</string>
    <string name="vault_ask_name_title_new">New vault</string>
    <string name="vault_ask_name_title_import">Import vault</string>
    <string name="vault_ask_name">Create a name for the vault</string>
    <string name="vault_ask_password">Enter a master password</string>
    <string name="vault_ask_password_confirm">Confirm a master password</string>
    <string name="vault_ask_password_not_match">The entered passwords do not match</string>
    <string name="vault_ask_encrypt_password_title">Use a master password instead of a mnemonic phrase?</string>
    <string name="vault_ask_encrypt_password_text">Would you like to store a mnemonic phrase encrypted with a master password instead of mnemonic phrase itself?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="show_qr">Show QR</string>
    <string name="scan_qr">Scan QR</string>
    <string name="paste">Paste</string>
    <string name="copy">Copy</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_10">10</string>
    <string name="_11">11</string>
    <string name="_12">12</string>
    <string name="random">Random</string>
    <string name="mnemonic_viewer_title">Mnemonic phrase</string>
    <string name="mnemonic_viewer_description_create">Create a mnemonic phrase</string>
    <string name="mnemonic_viewer_description_open">Enter mnemonic phrase or scan QR code</string>
    <string name="mnemonic_viewer_description_view">Please keep this secret!</string>
    <string name="mnemonic_viewer_paste_error">Unable to paste data</string>
    <string name="mnemonic_viewer_exit_error">Incorrect mnemonic</string>
    <string name="qr_viewer_mnemonic_title">Mnemonic as QR</string>
    <string name="qr_viewer_mnemonic_description">You can scan this code with another device using PetalVault. Please keep this secret!</string>
    <string name="qr_scanner_mnemonic_title">Scan mnemonic QR code</string>
    <string name="qr_scanner_canceled">Canceled</string>
    <string name="qr_scanner_mnemonic_error">Incorrect mnemonic phrase</string>
    <string name="qr_scanner_sync_import">Synchronize / import vault</string>
    <string name="no_mnemonic">No mnemonic phrase</string>
    <string name="mnemonic_clip_data">Mnemonic phrase</string>
    <string name="vault_create_already_exists">Vault %1$s already exists</string>
    <string name="vault_create_ok">Vault created</string>
    <string name="vault_create_error">Error creating vault</string>
    <string name="passwords">Passwords</string>
    <string name="export">Export</string>
    <string name="no_vaults">No vaults</string>
    <string name="vault_open_error">Error opening vault</string>
    <string name="vault_open_ask_password_title">Master password</string>
    <string name="vault_open_ask_password_description">Enter a master password</string>
    <string name="use_mnemonic_instead">Use mnemonic</string>
    <string name="vault_mnemonic_decrypt_error">Wrong password?</string>
    <string name="vault_open_decrypt_error">Wrong mnemonic?</string>
    <string name="done">Done</string>
    <string name="entry_deleted">Entry deleted</string>
    <string name="entry_delete_confirm_title">Delete entry</string>
    <string name="entry_delete_confirm_description">Do you really want to delete this entry?\nThis action cannot be undone!</string>
    <string name="vault_rename_title">Rename vault</string>
    <string name="vault_rename_description">Enter a new vault name</string>
    <string name="vault_rename_error_exists">Already exists</string>
    <string name="vault_rename_error">Error renaming vault</string>
    <string name="vault_rename_ok">Vault renamed</string>
    <string name="vault_delete_confirm_title">Delete vault</string>
    <string name="vault_delete_confirm_description">Do you really want to COMPLETELY delete this vault?\nTHIS ACTION CANNOT BE UNDONE!</string>
    <string name="vault_delete_error">Error deleting vault</string>
    <string name="vault_delete_ok">Vault deleted</string>
    <string name="add_device">Add new device</string>
    <string name="add_device_title">Create a name for a new device</string>
    <string name="add_device_hint">Device name</string>
    <string name="sync_to_title">Select device or create a new one</string>
    <string name="add_device_error_exists">Device %1$s already exists</string>
    <string name="qr_viewer_sync_to_title">Sync</string>
    <string name="qr_viewer_sync_to_description">Scan 1 or more QR codes on another other device to sync the vault</string>
    <string name="qr_viewer_export_to_title">Export</string>
    <string name="qr_viewer_export_to_description">Scan 1 or more QR codes on another other device to import the vault</string>
    <string name="nothing_to_sync">Nothing to sync</string>
    <string name="delete_device">Delete device</string>
    <string name="delete_device_select_title">Select device to delete</string>
    <string name="delete_device_confirm_title">Delete %1$s</string>
    <string name="delete_device_confirm_description">Do you really want to delete this device from synchronization history?</string>
    <string name="delete_device_ok">Device deleted</string>
    <string name="delete_device_error">Error deleting device</string>
    <string name="import_sync_received_part">Received part: %1$d / %2$d</string>
    <string name="import_sync_ok">Vault synchronized / imported</string>
    <string name="import_sync_error">Error synchronizing / importing vault</string>
    <string name="import_sync_already_received">Already received that part</string>
    <string name="sync_export_title">Sync / export</string>
    <string name="sync_export_btn">Sync</string>
    <string name="github">GitHub</string>
    <string name="about">Secure offline multi-vault password manager with QR code-based synchronization</string>
</resources>