<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnExport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="4dp"
        android:text="@string/export"
        app:icon="@drawable/baseline_arrow_upward_24" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSyncTo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="4dp"
        android:text="@string/sync_to"
        app:icon="@drawable/baseline_arrow_upward_24" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSyncFrom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="4dp"
        android:text="@string/sync_from"
        app:icon="@drawable/baseline_arrow_downward_24" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnDeleteDevice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        android:text="@string/delete_device"
        app:icon="@drawable/baseline_delete_24" />

</LinearLayout>