<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MnemonicActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnScan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scan_qr"
        app:icon="@drawable/baseline_camera_alt_24"
        app:layout_constraintBottom_toBottomOf="@+id/btnShow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnShow"
        app:layout_constraintTop_toTopOf="@+id/btnShow" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnOk"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/purple_2"
        android:text="@string/ok"
        app:icon="@drawable/baseline_check_24"
        app:layout_constraintBottom_toBottomOf="@+id/btnRandom"
        app:layout_constraintEnd_toEndOf="@+id/btnScan"
        app:layout_constraintStart_toStartOf="@+id/btnScan"
        app:layout_constraintTop_toTopOf="@+id/btnRandom" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnShow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/show_qr"
        app:icon="@drawable/baseline_qr_code_24"
        app:layout_constraintBottom_toTopOf="@+id/btnRandom"
        app:layout_constraintEnd_toStartOf="@+id/btnScan"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/mnemonicTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textColor="@color/red_1"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/btnCopy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnCopy" />

    <TextView
        android:id="@+id/mnemonicDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:textAlignment="center"
        android:textColor="@color/red_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCopy" />

    <!--<com.google.android.flexbox.FlexboxLayout-->
    <!--
    app:alignContent="space_between"
        app:alignItems="stretch"
        app:flexWrap="wrap"
    -->

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCopy"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@android:color/transparent"
        android:minWidth="0dp"
        app:icon="@drawable/baseline_content_copy_24"
        app:iconGravity="textTop"
        app:iconPadding="0dp"
        app:iconTint="@color/material_button_icon"
        app:layout_constraintBottom_toBottomOf="@+id/btnPaste"
        app:layout_constraintEnd_toStartOf="@+id/btnPaste"
        app:layout_constraintTop_toTopOf="@+id/btnPaste" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnPaste"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@android:color/transparent"
        android:minWidth="0dp"
        app:icon="@drawable/baseline_content_paste_24"
        app:iconGravity="textTop"
        app:iconPadding="0dp"
        app:iconTint="@color/material_button_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"

        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/btnShow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mnemonicDescription"
        app:layout_constraintWidth_max="600dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mnemonicDescription">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/_1"
                    android:textAlignment="textEnd" />

                <AutoCompleteTextView
                    android:id="@+id/mnemonicWord1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="6"
                    android:inputType="text"
                    tools:ignore="Autofill,LabelFor" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/_2"
                    android:textAlignment="textEnd" />

                <AutoCompleteTextView
                    android:id="@+id/mnemonicWord2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="6"
                    android:inputType="text"
                    tools:ignore="Autofill,LabelFor" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/_3"
                    android:textAlignment="textEnd" />

                <AutoCompleteTextView
                    android:id="@+id/mnemonicWord3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="6"
                    android:inputType="text"
                    tools:ignore="Autofill,LabelFor" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/_4"
                    android:textAlignment="textEnd" />

                <AutoCompleteTextView
                    android:id="@+id/mnemonicWord4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="6"
                    android:inputType="text"
                    tools:ignore="Autofill,LabelFor" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/_5"
                    android:textAlignment="textEnd" />

                <AutoCompleteTextView
                    android:id="@+id/mnemonicWord5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="6"
                    android:inputType="text"
                    tools:ignore="Autofill,LabelFor" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/_6"
                    android:textAlignment="textEnd" />

                <AutoCompleteTextView
                    android:id="@+id/mnemonicWord6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="6"
                    android:inputType="text"
                    tools:ignore="Autofill,LabelFor" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/_7"
                    android:textAlignment="textEnd" />

                <AutoCompleteTextView
                    android:id="@+id/mnemonicWord7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="6"
                    android:inputType="text"
                    tools:ignore="Autofill,LabelFor" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/_8"
                    android:textAlignment="textEnd" />

                <AutoCompleteTextView
                    android:id="@+id/mnemonicWord8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="6"
                    android:inputType="text"
                    tools:ignore="Autofill,LabelFor" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/_9"
                    android:textAlignment="textEnd" />

                <AutoCompleteTextView
                    android:id="@+id/mnemonicWord9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="6"
                    android:inputType="text"
                    tools:ignore="Autofill,LabelFor" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/_10"
                    android:textAlignment="textEnd" />

                <AutoCompleteTextView
                    android:id="@+id/mnemonicWord10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="6"
                    android:inputType="text"
                    tools:ignore="Autofill,LabelFor" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@+id/btnCopy"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/_11"
                    android:textAlignment="textEnd" />

                <AutoCompleteTextView
                    android:id="@+id/mnemonicWord11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="6"
                    android:inputType="text"
                    tools:ignore="Autofill,LabelFor" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/_12"
                    android:textAlignment="textEnd" />

                <AutoCompleteTextView
                    android:id="@+id/mnemonicWord12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="6"
                    android:inputType="text"
                    tools:ignore="Autofill,LabelFor" />

            </LinearLayout>
        </LinearLayout>

    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRandom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/random"
        app:icon="@drawable/baseline_blur_on_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnShow"
        app:layout_constraintStart_toStartOf="@+id/btnShow" />


</androidx.constraintlayout.widget.ConstraintLayout>